[DOC] Enhancement intro

--- a/docs/content/enhancements.tex
+++ b/docs/content/enhancements.tex
@@ -2,7 +2,7 @@
 \chapter{Enhancements} \label{enhancements}
 %----------------------------------------------------------------------------
 
-This chapter describes a few alternatives to improve the dependability of the sample application.
+This chapter describes a few alternatives to improve the dependability of the sample application that can happen either by implementing additional features or making architectural changes to the system.
 
 %----------------------------------------------------------------------------
 \section{Introduction}
