[DOC] Abstract fixes

--- a/docs/content/abstract.tex
+++ b/docs/content/abstract.tex
@@ -24,7 +24,7 @@ Cloud computing is everywhere. From individual users to the biggest enterprises 
 
 Kubernetes became the de facto standard for deploying and managing containerized microservice architectures both in public and private clouds. It allows developers to efficiently orchestrate their workload, but this high abstraction layer results in more complex ways of measuring and guaranteeing system dependability.
 
-This thesis work first introduces Kubernetes, its most important functions and ideas, along with other popular technologies and concepts in this ecosystem. It defines a way how dependability metrics in distributed systems can be measured. This is demonstrated with the help of a custom implemented Kubernetes based sample application of which the design and implementation are well described. In order to be able to measure the dependability characteristics of the before mentioned application, a test framework was created with fault-injection capabilities. Afterwards, the possible alternatives to improve dependability in a Kubernetes-based environment are explored and illustrated with two implemented examples. The effects of these enhancements are assessed with the test framework and the results are evaluated and displayed.
+This thesis work first introduces Kubernetes, its most important functions and ideas, along with other popular technologies and concepts in this ecosystem. It defines a way how dependability metrics in distributed systems can be measured. This is demonstrated with the help of a custom implemented Kubernetes-based sample application of which the design and implementation are well described. In order to be able to measure the dependability characteristics of the before mentioned application, a test framework was created with fault injection capabilities. Afterwards, the possible alternatives to improve dependability in a Kubernetes-based environment are explored and illustrated with two implemented examples. The effects of these enhancements are assessed with the test framework and the results are evaluated and presented.
 
 The document ends with a few suggestions and ideas for future developments and with a brief review of the related works of this thesis project which try to solve similar problems and use-cases as encountered during this discussion.
 
