[DOC] Hun abstract first paragraph

--- a/docs/content/abstract.tex
+++ b/docs/content/abstract.tex
@@ -8,8 +8,9 @@
 %----------------------------------------------------------------------------
 \chapter*{Kivonat}\addcontentsline{toc}{chapter}{Kivonat}
 
-TODO
+A felhőalapú számítástechnika mindenhol jelen van. Az egyéni felhasználóktól kezdve a legnagyobb vállalatokig mindenki szeretné kihasználni a felhő számtalan előnyét. Az alkalmazásfejlesztők és más informatikai szakemberek azonban tudják, hogy látszólagos könnyű használata ellenére a felhő nem egyszerű. A komponensek örök mozgásban vannak, változik az állapotuk, a rendszerek váratlanul meghibásodnak, miközben a felhasználók által indukált terhelés ugrásszerűen emelkedhet vagy akár teljesen eltűnhet. Hogyan lehet ilyen körülmények között megbízható, hibatűrő felhőalapú alkalmazásokat létrehozni?
 
+...
 
 \vfill
 \selectenglish
