[DOC] Hun abstrack 2nd paragraph

--- a/docs/content/abstract.tex
+++ b/docs/content/abstract.tex
@@ -8,7 +8,9 @@
 %----------------------------------------------------------------------------
 \chapter*{Kivonat}\addcontentsline{toc}{chapter}{Kivonat}
 
-A felhőalapú számítástechnika mindenhol jelen van. Az egyéni felhasználóktól kezdve a legnagyobb vállalatokig mindenki szeretné kihasználni a felhő számtalan előnyét. Az alkalmazásfejlesztők és más informatikai szakemberek azonban tudják, hogy látszólagos könnyű használata ellenére a felhő nem egyszerű. A komponensek örök mozgásban vannak, változik az állapotuk, a rendszerek váratlanul meghibásodnak, miközben a felhasználók által indukált terhelés ugrásszerűen emelkedhet vagy akár teljesen eltűnhet. Hogyan lehet ilyen körülmények között megbízható, hibatűrő felhőalapú alkalmazásokat létrehozni?
+A felhőalapú számítástechnika mindenhol jelen van. Az egyéni felhasználóktól kezdve a legnagyobb vállalatokig mindenki szeretné kihasználni a felhő számtalan előnyét. Az alkalmazásfejlesztők és más informatikai szakemberek azonban tudják, hogy a látszólagos könnyű használata ellenére a felhő nem egyszerű. A komponensek örök mozgásban vannak, változik az állapotuk, a rendszerek váratlanul meghibásodnak, miközben a felhasználók által indukált terhelés ugrásszerűen emelkedhet vagy akár teljesen eltűnhet. Hogyan lehet ilyen körülmények között megbízható, hibatűrő, felhőalapú alkalmazásokat létrehozni?
+
+A Kubernetes lett a de facto szabvány, ha konténeralapú mikroszolgáltatás telepítéséről és kezeléséréről van szó akár nyilvános vagy privát felhőkben. A Kubernetes lehetővé teszi a fejlesztők számára, hogy hatékonyan szervezzék alkalmazásaikat, de ez a magas absztrakciós szint átformálja és komolyabb feladattá teszi a szolgáltatásbiztonság mérésére és garantálására szolgáló módszerek használatát.
 
 ...
 
