[DOC] Rewrite ENG abstract second part

--- a/docs/content/abstract.tex
+++ b/docs/content/abstract.tex
@@ -27,9 +27,9 @@ Cloud computing is everywhere. From individual users to the biggest enterprises 
 
 Kubernetes became the de facto standard for deploying and managing containerized microservice architectures both in public and private clouds. It allows developers to efficiently orchestrate their workload, but this high abstraction layer results in more complex ways of measuring and guaranteeing system dependability.
 
-This thesis work first introduces Kubernetes, its most important functions and ideas, along with other popular technologies and concepts in this ecosystem. It defines a way how dependability metrics in distributed systems can be measured. This is demonstrated with the help of a custom implemented Kubernetes-based sample application of which the design and implementation are well described. In order to be able to measure the dependability characteristics of the before mentioned application, a test framework was created with fault injection capabilities. Afterwards, the possible alternatives to improve dependability in a Kubernetes-based environment are explored and illustrated with two implemented examples. The effects of these enhancements are assessed with the test framework and the results are evaluated and presented.
+This thesis work first introduces Kubernetes, its most important functions and ideas, along with other popular technologies and concepts in this ecosystem. It defines a way how dependability metrics in distributed systems can be measured. This is demonstrated with the help of a custom implemented Kubernetes-based sample application of which the design and implementation are well described.
 
-The document ends with a few suggestions and ideas for future developments and with a brief review of the related works of this thesis project which try to solve similar problems and use-cases as encountered during this discussion.
+In order to be able to measure the dependability characteristics of the before mentioned application, a test framework was created. The framework is composed of multiple technologies facilitating automation, load generation, fault injection and  metric collection. Furthermore, it is possible to apply various kinds of enhancements in different combinations to improve reliability and verify their impact. The thesis presents two example implementations, however, more can be added based on the later discussed considerations. The typical workflow of the framework is to first deploy the application with a given configuration, start a load generation so there is constant traffic towards the application, execute the fault injection mechanisms and all the while observing the state of the system and collecting metrics. This can be repeated with different configurations and the results can be systematically compared and visualized.
 
 
 \vfill
