[DOC] Rewrite HUN abstract second part, small fixes

--- a/docs/content/abstract.tex
+++ b/docs/content/abstract.tex
@@ -10,9 +10,12 @@
 
 A felhőalapú számítástechnika mindenhol jelen van. Az egyéni felhasználóktól kezdve a legnagyobb vállalatokig mindenki szeretné kihasználni a felhő számtalan előnyét. Az alkalmazásfejlesztők és más informatikai szakemberek azonban tudják, hogy a látszólagos könnyű használata ellenére a felhő nem egyszerű. A komponensek örök mozgásban vannak, változik az állapotuk, a rendszerek váratlanul meghibásodnak, miközben a felhasználók által indukált terhelés ugrásszerűen emelkedhet vagy akár teljesen eltűnhet. Hogyan lehet ilyen körülmények között megbízható, hibatűrő, felhőalapú alkalmazásokat létrehozni?
 
-A Kubernetes lett a de facto szabvány, ha konténeralapú mikroszolgáltatás telepítéséről és kezeléséréről van szó akár nyilvános vagy privát felhőkben. A Kubernetes lehetővé teszi a fejlesztők számára, hogy hatékonyan szervezzék alkalmazásaikat, de ez a magas absztrakciós szint átformálja és komolyabb feladattá teszi a szolgáltatásbiztonság mérésére és garantálására szolgáló módszerek használatát.
+A Kubernetes lett a de facto szabvány, ha konténeralapú mikroszolgáltatások telepítéséről és üzemeltetéséről van szó akár nyilvános vagy privát felhőkben. A Kubernetes lehetővé teszi a fejlesztők számára, hogy hatékonyan szervezzék alkalmazásaikat, de ez a magas absztrakciós szint átformálja és komolyabb feladattá teszi a szolgáltatásbiztonság mérésére és garantálására szolgáló módszerek használatát.
 
-...
+A diplomaterv először bemutatja a Kubernetes-t, annak legfontosabb funkcióit és ötleteit, valamint a hozzá kapcsolódó ökoszisztéma egyéb népszerű technológiáit és fogalmait. Meghatározza, hogy elosztott rendszerekben miként mérhetőek a szolgáltatásbiztonság metrikák. Ezt egy egyedi fejlesztésű, Kubernetes alapú mintaalkalmazás segítségével demonstrálja, amelynek tervezése és megvalósítása jól leírásra kerül.
+
+Annak érdekében, hogy az előbb említett alkalmazás szolgáltatásbiztonság jellemzőit mérni lehessen, elkészült egy tesztelési keretrendszer. A keretrendszer több olyan technológiából épül fel, amelyek lehetővé teszik az automatizálást, a terhelésgenerálást, a hibainjektálást és a metrikák gyűjtését. Ezen túlmenően a szolgáltatásbiztonság javítása érdekében különböző beavatkozások alkalmazhatóak, melyek hatása ellenőrizhető és összevethető. A dolgozat két példaimplementációt mutat be, azonban a később tárgyalt megfontolások alapján továbbiak megvalósítása is lehetséges. A keretrendszer tipikus munkafolyamata a következő: először telepítjük az alkalmazást egy adott konfigurációval, elindítunk egy terhelésgenerálást, hogy legyen állandó forgalom az alkalmazás felé, végrehajtjuk a hibainjektálási mechanizmusokat, és mindeközben figyeljük a rendszer állapotát és gyűjtjük a metrikákat. Ez megismételhető különböző konfigurációkkal, és az eredmények szisztematikusan összehasonlíthatók és vizualizálhatók.
+
 
 \vfill
 \selectenglish
@@ -29,7 +32,7 @@ Kubernetes became the de facto standard for deploying and managing containerized
 
 This thesis work first introduces Kubernetes, its most important functions and ideas, along with other popular technologies and concepts in this ecosystem. It defines a way how dependability metrics in distributed systems can be measured. This is demonstrated with the help of a custom implemented Kubernetes-based sample application of which the design and implementation are well described.
 
-In order to be able to measure the dependability characteristics of the before mentioned application, a test framework was created. The framework is composed of multiple technologies facilitating automation, load generation, fault injection and  metric collection. Furthermore, it is possible to apply various kinds of enhancements in different combinations to improve reliability and verify their impact. The thesis presents two example implementations, however, more can be added based on the later discussed considerations. The typical workflow of the framework is to first deploy the application with a given configuration, start a load generation so there is constant traffic towards the application, execute the fault injection mechanisms and all the while observing the state of the system and collecting metrics. This can be repeated with different configurations and the results can be systematically compared and visualized.
+In order to be able to measure the dependability characteristics of the before mentioned application, a test framework was created. The framework is composed of multiple technologies facilitating automation, load generation, fault injection and  metric collection. Furthermore, it is possible to apply various kinds of enhancements in different combinations to improve dependability and verify their impact. The thesis presents two example implementations, however, more can be added based on the later discussed considerations. The typical workflow of the framework is to first deploy the application with a given configuration, start a load generation so there is constant traffic towards the application, execute the fault injection mechanisms and all the while observing the state of the system and collecting metrics. This can be repeated with different configurations and the results can be systematically compared and visualized.
 
 
 \vfill
