--- a/docs/content/abstract.tex
+++ b/docs/content/abstract.tex
@@ -8,9 +8,9 @@
 %----------------------------------------------------------------------------
 \chapter*{Kivonat}\addcontentsline{toc}{chapter}{Kivonat}
 
-A felhőalapú számítástechnika mindenhol jelen van. Az egyéni felhasználóktól kezdve a legnagyobb vállalatokig mindenki szeretné kihasználni a felhő számtalan előnyét. Az alkalmazásfejlesztők és más informatikai szakemberek azonban tudják, hogy a látszólagos könnyű használata ellenére a felhő nem egyszerű. A komponensek örök mozgásban vannak, változik az állapotuk, a rendszerek váratlanul meghibásodnak, miközben a felhasználók által indukált terhelés ugrásszerűen emelkedhet vagy akár teljesen eltűnhet. Hogyan lehet ilyen körülmények között megbízható, hibatűrő, felhőalapú alkalmazásokat létrehozni?
+A felhőalapú számítástechnika mindenhol jelen van. Az egyéni felhasználóktól kezdve a legnagyobb vállalatokig mindenki szeretné kihasználni a felhő számtalan előnyét. Az alkalmazásfejlesztők és más informatikai szakemberek azonban tudják, hogy a látszólagos könnyű használata ellenére a felhő nem egyszerű. A komponensek folyamatos mozgásban vannak, változik az állapotuk, a rendszerek váratlanul meghibásodhatnak, miközben a felhasználók által indukált terhelés ugrásszerűen emelkedhet vagy akár teljesen el is tűnhet. Hogyan lehet ilyen körülmények között megbízható, hibatűrő, felhőalapú alkalmazásokat létrehozni?
 
-A Kubernetes lett a de facto szabvány, ha konténeralapú mikroszolgáltatások telepítéséről és üzemeltetéséről van szó akár nyilvános vagy privát felhőkben. A Kubernetes lehetővé teszi a fejlesztők számára, hogy hatékonyan szervezzék alkalmazásaikat, de ez a magas absztrakciós szint átformálja és komolyabb feladattá teszi a szolgáltatásbiztonság mérésére és garantálására szolgáló módszerek használatát.
+Ha konténeralapú mikroszolgáltatások telepítéséről és üzemeltetéséről beszélünk -- legyen szó nyilvános vagy privát felhőről --, a Kubernetes lett a de facto szabvány. A Kubernetes lehetővé teszi a fejlesztők számára, hogy hatékonyan szervezzék alkalmazásaikat, ám ez a magas absztrakciós szint átformálja és komolyabb feladattá teszi a szolgáltatásbiztonság mérésére és garantálására szolgáló módszerek használatát.
 
 A diplomaterv először bemutatja a Kubernetes-t, annak legfontosabb funkcióit és ötleteit, valamint a hozzá kapcsolódó ökoszisztéma egyéb népszerű technológiáit és fogalmait. Meghatározza, hogy elosztott rendszerekben miként mérhetőek a szolgáltatásbiztonság metrikák. Ezt egy egyedi fejlesztésű, Kubernetes alapú mintaalkalmazás segítségével demonstrálja, amelynek tervezése és megvalósítása jól leírásra kerül.
 
@@ -26,11 +26,11 @@ Annak érdekében, hogy az előbb említett alkalmazás szolgáltatásbiztonság
 %----------------------------------------------------------------------------
 \chapter*{Abstract}\addcontentsline{toc}{chapter}{Abstract}
 
-Cloud computing is everywhere. From individual users to the biggest enterprises everyone wishes to make benefit from the countless advantages that the cloud offers. However, application developers and other IT professionals know that despite its apparent simplicity the cloud is not easy. All the components are constantly on the move, changing their state, systems fail unexpectedly while the user workload can quickly soar off the charts or disappear completely. How is it possible to create reliable, fault-tolerant cloud-based applications under these conditions?
+Cloud computing is everywhere. From individual users to the largest enterprises everyone wishes to make benefit from the countless advantages that the cloud offers. However, application developers and other IT professionals know that despite its apparent simplicity the cloud is not easy. All the components are constantly on the move, changing their state, systems fail unexpectedly while the user workload can quickly soar off the charts or disappear completely. How is it possible to create reliable, fault-tolerant cloud-based applications under these conditions?
 
 Kubernetes became the de facto standard for deploying and managing containerized microservice architectures both in public and private clouds. It allows developers to efficiently orchestrate their workload, but this high abstraction layer results in more complex ways of measuring and guaranteeing system dependability.
 
-This thesis work first introduces Kubernetes, its most important functions and ideas, along with other popular technologies and concepts in this ecosystem. It defines a way how dependability metrics in distributed systems can be measured. This is demonstrated with the help of a custom implemented Kubernetes-based sample application of which the design and implementation are well described.
+This thesis work first introduces Kubernetes, its most important functions and ideas, along with other popular technologies and concepts in this ecosystem. It defines a way how dependability metrics in distributed systems can be measured. This is demonstrated with the help of a custom-made Kubernetes-based sample application of which the design and implementation are well described.
 
 In order to be able to measure the dependability characteristics of the before mentioned application, a test framework was created. The framework is composed of multiple technologies facilitating automation, load generation, fault injection and  metric collection. Furthermore, it is possible to apply various kinds of enhancements in different combinations to improve dependability and verify their impact. The thesis presents two example implementations, however, more can be added based on the later discussed considerations. The typical workflow of the framework is to first deploy the application with a given configuration, start a load generation so there is constant traffic towards the application, execute the fault injection mechanisms and all the while observing the state of the system and collecting metrics. This can be repeated with different configurations and the results can be systematically compared and visualized.
 
