--- a/docs/content/related-works.tex
+++ b/docs/content/related-works.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\chapter{Related Works}
+\chapter{Related Works} \label{related-works}
 %----------------------------------------------------------------------------
 
 The accomplished implementation of the entire thesis work -- including the sample application and the test framework -- realizes a unique set of functionalities in a single system compared to available tools on the market and in the open-source community. However, there are a couple of parts in this system that fulfills a job similar to other existing softwares, like conducting reliability analysis or executing chaos engineering scenarios in Kubernetes based environments. This chapter attempts to collect some of them, without being exhaustive.
