--- a/docs/content/background.tex
+++ b/docs/content/background.tex
@@ -28,9 +28,9 @@ Cloud computing proposes many advantages compared to the traditional model of ev
 \subsection{Software as a Service}
 %----------------------------------------------------------------------------
 
-Software as a Service (or SaaS for short) is software delivery model, where the software is generally licensed on a subscription basis and where the offered software is centrally hosted \cite{SaaSWikipedia}.
+Software as a Service (or SaaS for short) is a software delivery model where the software is generally licensed on a subscription basis and where the offered software is centrally hosted \cite{SaaSWikipedia}.
 
-The SaaS model evolved from the application service provisioning (ASP) introduced in the 1990s, which involved vendor hosting and delivering application capabilities remotely from a data center. However, at the time, the Internet technology acted like a glass ceiling for this model because of limited bandwidth availability and slow Internet speeds \cite{SaaSOppRisk}.
+The SaaS model evolved from the application service provisioning (ASP) introduced in the 1990s, which involved vendor hosting and delivering application capabilities remotely from a data center. However, at that time the Internet technology acted like a glass ceiling for this model because of limited bandwidth availability and slow Internet speed \cite{SaaSOppRisk}.
 
 Nowadays, SaaS offers both vendors and users many benefits. For vendors, it provides simplified software installation, maintenance and centralized control over versioning. Users can access the service from anywhere, anytime and they can collaborate easily while their data is kept safe. All the building blocks for this are provided by cloud computing to enable easy deployment and scaling on demand \cite{AboveTheClouds}.
 
@@ -63,13 +63,13 @@ Nowadays, SaaS offers both vendors and users many benefits. For vendors, it prov
 \section{Microservices}
 %----------------------------------------------------------------------------
 
-With the emerging of cloud technologies, the microservices architectural style gains great popularity. Its main idea is to create an application as a suite of small services, each running in its own process and communicating with lightweight mechanisms \cite{MicroservicesMF}.
+With the emerging of cloud technologies, the microservices architectural style gained great popularity. Its main idea is to create an application as a suite of small services, each running in its own process and communicating with lightweight mechanisms \cite{MicroservicesMF}.
 
-Before the adaptation of microservices, applications were built using a monolithic approach, where a single deployment is responsible for all the business use-cases. This caused tight coupling on many levels from software functionalities, technologies and even on organizational management. Furthermore, these large monolithic pieces of software introduced serious scalability limitations into system often leading to underprovisioning or overprovisioning.
+Before the adaptation of microservices, applications were built using a monolithic approach, where a single deployment was responsible for all the business use-cases. This caused tight coupling on many levels from software functionalities, technologies and even on organizational management. Furthermore, these large monolithic pieces of software introduced serious scalability limitations into systems, often leading to underprovisioning or overprovisioning.
 
-On the other hand, microservices architecture promotes well defined separation of responsibilities so each component in the system is focused on implementing specific parts of the business domain. There are many guidelines on how to achieve this, but in general they try to give a formula based on similar considerations. Applications should be developed and deployed as a set of independent services optimized for a single function -- this makes each service smaller and simpler to write and maintain (Rober Martin's "Single Responsibility Principle" \cite{RobertMartinOOP}). The components should conduct all communications via REST APIs and message brokers and avoid using shared databases to exchange information. Best practices also suggest to manage high availability and clustering considerations on a per-service level, because in a large system, not all services need to scale and can be deployed in a minimum number of servers to conserve resources. Others may require scaling up to very large number of instances \cite{ImplPatternsMicrosServices}.
+On the other hand, microservices architecture promotes well defined separation of responsibilities so each component in the system is focused on implementing specific parts of the business domain. There are many guidelines on how to achieve this, but in general, they try to give a formula based on similar considerations. Applications should be developed and deployed as a set of independent services optimized for a single function -- this makes each service smaller and simpler to write and maintain (Robert Martin's "Single Responsibility Principle" \cite{RobertMartinOOP}). The components should conduct all communications via REST APIs and message brokers while avoiding using shared databases to exchange information. Best practices also suggest to manage high availability and clustering considerations on a per-service level, because in a large system, not all services need to scale and can be deployed in a minimum number of servers to conserve resources, while others may require scaling up to very large number of instances \cite{ImplPatternsMicrosServices}.
 
-Beside the many advantages, applying the microservices architecture naturally brings in much complexity into systems. Operating many components means that failures can happen in more places and it can be quite challenging to determine the exact root cause of each faults. This leads to the fact that observability is a crucial requirement in such systems to be able to monitor the health status and metrics of each service and to collect all logs from components in order to sensibly aggregate them. The increased quantity of dynamically moving parts in the system also makes it harder to properly scale the system due to changing workloads. As there may be multiple instances and even versions of a given services, maintaining the connections, providing service discovery mechanisms and managing effective routing and configuration propagation can be daunting tasks.
+Beside the many advantages, applying the microservices architecture naturally brings in much complexity into systems. Operating many components means that failures may happen in more places and it can be quite challenging to determine the exact root cause of each faults. This leads to the fact that observability is a crucial requirement in such systems to be able to monitor the health status and metrics of each service and to collect all logs from components in order to sensibly aggregate them. The increased quantity of dynamically moving parts in the system also makes it harder to properly scale the system due to changing workloads. As there may be multiple instances and even versions of a given services, maintaining the connections, providing service discovery mechanisms and managing effective routing and configuration propagation can be daunting tasks.
 
 %\begin{itemize}
 %	\item before this, monolithic applications were popular
@@ -156,7 +156,7 @@ Beside the many advantages, applying the microservices architecture naturally br
 \section{Dependability}
 %----------------------------------------------------------------------------
 
-Dependability of a computing system is the ability to provide service in which reliance can be justifiably placed \cite{DependabilityBMEMIT}. Meaning that based on conducting several analysis, evaluations and measurements it can be proofed that service satisfies the needs.
+Dependability of a computing system is the ability to provide service in which reliance can be justifiably placed \cite{DependabilityBMEMIT}. Meaning, that based on conducting several analysis, evaluations and measurements it can be proofed that service satisfies the needs.
 
 %----------------------------------------------------------------------------
 \subsection{Attributes of Dependability} \label{dependability-attributes}
